deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modresort-app-web
  labels:
    app: modresort-app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: modresort-app-web
  template:
    metadata:
      labels:
        run: modresort-app-web
    spec:
      containers:
      - name: cmodresort-app-web
        image: niklaushirt/modresort:1.0
